Set the relative sizes of the logo elements and the grid. Coded the UIColors into RGB

--- a/Logo/Logo/Base.lproj/Main.storyboard
+++ b/Logo/Logo/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hso-yd-nkd" customClass="LogoView" customModule="Logo" customModuleProvider="target">
-                                <rect key="frame" x="75" y="316" width="264" height="264"/>
+                                <rect key="frame" x="41.5" y="282.5" width="331" height="331"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hso-yd-nkd" secondAttribute="height" multiplier="1:1" id="naM-vW-icr"/>
@@ -26,9 +26,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="hso-yd-nkd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2yG-Qg-5bi"/>
-                            <constraint firstItem="hso-yd-nkd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="RNo-yH-LJc"/>
                             <constraint firstItem="hso-yd-nkd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eFz-HT-npC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hso-yd-nkd" secondAttribute="trailing" constant="75" id="fpm-ph-don"/>
+                            <constraint firstItem="hso-yd-nkd" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="kwN-4t-6dx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
